This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Possible uninitialized variable in Objects/obmalloc.c
Type: compile error Stage: resolved
Components: Versions: Python 3.9, Python 3.8, Python 3.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: hansrajdas, nanjekyejoannah, vstinner
Priority: normal Keywords: patch

Created on 2019-07-31 14:17 by nanjekyejoannah, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 15309 closed hansrajdas, 2019-08-16 20:26
PR 15333 merged vstinner, 2019-08-19 10:27
PR 15342 merged vstinner, 2019-08-20 12:11
PR 15343 merged vstinner, 2019-08-20 12:48
Messages (6)
msg348807 - (view) Author: Joannah Nanjekye (nanjekyejoannah) * (Python committer) Date: 2019-07-31 14:17
Here is a compilation warning I got;

Objects/obmalloc.c: In function ‘_PyObject_Malloc’:
Objects/obmalloc.c:1646:16: warning: ‘ptr’ may be used uninitialized in this function [-Wmaybe-uninitialized]
         return ptr;
                ^~~
We can investigate If its not a false alarm.
msg349952 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2019-08-19 10:15
bpo-37869 has been marked as a duplicate of this issue.
msg349998 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2019-08-20 11:28
New changeset 18f8dcfa10d8a858b152d12a9ad8fa83b7e967f0 by Victor Stinner in branch 'master':
bpo-37732: Fix GCC warning in _PyObject_Malloc() (GH-15333)
https://github.com/python/cpython/commit/18f8dcfa10d8a858b152d12a9ad8fa83b7e967f0
msg350002 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2019-08-20 12:44
New changeset 30e5aff5fb0e3841107ddd4539a1f5b8521c80fb by Victor Stinner in branch '3.8':
bpo-37732: Fix GCC warning in _PyObject_Malloc() (GH-15333) (GH-15342)
https://github.com/python/cpython/commit/30e5aff5fb0e3841107ddd4539a1f5b8521c80fb
msg350005 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2019-08-20 14:29
New changeset c9a484a1e76384680b90454018389465760dbeae by Victor Stinner in branch '3.7':
bpo-37732: Fix GCC warning in _PyObject_Malloc() (GH-15333) (GH-15342) (GH-15343)
https://github.com/python/cpython/commit/c9a484a1e76384680b90454018389465760dbeae
msg350006 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2019-08-20 14:30
Thanks Joannah for the bug report. I fixed the warning on 3.7, 3.8 and master branches.
History
Date User Action Args
2022-04-11 14:59:18adminsetgithub: 81913
2019-08-20 14:30:56vstinnersetstatus: open -> closed
versions: + Python 3.7, Python 3.8, Python 3.9
messages: + msg350006

resolution: fixed
stage: patch review -> resolved
2019-08-20 14:29:26vstinnersetmessages: + msg350005
2019-08-20 12:48:29vstinnersetpull_requests: + pull_request15060
2019-08-20 12:44:37vstinnersetmessages: + msg350002
2019-08-20 12:11:02vstinnersetpull_requests: + pull_request15059
2019-08-20 11:28:09vstinnersetmessages: + msg349998
2019-08-19 10:27:13vstinnersetpull_requests: + pull_request15051
2019-08-19 10:15:57vstinnersetnosy: + vstinner
messages: + msg349952
2019-08-19 10:15:34vstinnerlinkissue37869 superseder
2019-08-17 06:28:19hansrajdassetnosy: + hansrajdas
2019-08-16 20:26:19hansrajdassetkeywords: + patch
stage: patch review
pull_requests: + pull_request15035
2019-07-31 14:27:55nanjekyejoannahsettype: behavior -> compile error
2019-07-31 14:17:16nanjekyejoannahcreate